src/test/deca/syntax/invalid/if_missing_opar.deca

// Description :
// Instruction if avec parenthèse ouvrante manquante avant la condition.
// On teste que la syntaxe exige : if '(' expr ')' '{' ... '}'.
//
// Resultats :
// Erreur syntaxique
// Regle : if_then_else -> IF '(' expr ')' '{' list_inst '}' (ELSE ...)*
//

{
    if x) {
        x = 1 ;
    }
}